version/0.30/_sources/api/solver/_autosummary/settings/display_imported_surfaces.rst.txt
:orphan:

.. _display_imported_surfaces:

display_imported_surfaces
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.display_imported_surfaces
    :show-inheritance:

.. rubric:: Arguments

============================================   ============

Argument                                            Summary

============================================   ============
:ref:`original_surfaces <original_surfaces>`       Surface.

============================================   ============

.. rubric:: Included in:

==============================================   ======================================

Parent                                                                          Summary

==============================================   ======================================
:ref:`definition_3_child <definition_3_child>`       'child_object_type' of definition.

==============================================   ======================================

